force-app/main/default/objects/Client__c/fields/AP_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>AP_Client_Id__c</fullName>
    <label>AP Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>