force-app/main/default/objects/Client__c/fields/API_Secret__c.field-meta.xml
<CustomField>
    <fullName>API_Secret__c</fullName>
    <label>API Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>