force-app/main/default/objects/Client__c/fields/Instr__c.field-meta.xml
<CustomField>
    <fullName>Instr__c</fullName>
    <label>Instruction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>