force-app/main/default/objects/Client__c/fields/Last_Policy_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Policy_Updated_Date__c</fullName>
    <label>Last Policy Updated Date</label>
    <type>DateTime</type>
</CustomField>