force-app/main/default/objects/Client__c/fields/Last_Updated_Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Policy_Name__c</fullName>
    <label>Last Updated Policy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>