force-app/main/default/objects/Client__c/fields/Renewal_Reminder_Policy__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Reminder Policy</label>
    <referenceTo>Renewal_Reminder_Policy__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>