force-app/main/default/objects/Client__c/fields/Symphony_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Symphony_Org_Id__c</fullName>
    <label>Symphony Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>